# fitsync_backend

./: .gitignore  Dockerfile  pyproject.toml
app/: main.py
app/core/: config.py
app/models/: activity.py
app/repositories/: activity_repository.py
app/schemas/: activity.py
