[tool.poetry]
name = "fitsync"
version = "0.1.0"
description = ""
authors = ["Daniel Montilla <danielmontillanavas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
